--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "jetty": "~0.2.1",
-    "keypress": "~0.2.1"
+    "keypress": "~0.2.1",
+    "mux-demux": "~3.7.8"
   }
 }
