--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "dependencies": {
     "jetty": "~0.2.1",
     "keypress": "~0.2.1",
-    "mux-demux": "~3.7.8"
+    "mux-demux": "~3.7.8",
+    "ndarray-continuous": "~0.4.1",
+    "zeros": "0.0.0",
+    "moore": "0.0.2"
   }
 }
