--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ndarray-continuous": "~0.4.1",
     "zeros": "0.0.0",
     "moore": "0.0.2",
-    "cave-automata-2d": "~0.3.1"
+    "cave-automata-2d": "~0.3.1",
+    "ndarray-fill": "~0.1.0"
   }
 }
