--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "zeros": "0.0.0",
     "moore": "0.0.2",
     "cave-automata-2d": "~0.3.1",
-    "ndarray-fill": "~0.1.0"
+    "ndarray-fill": "~0.1.0",
+    "through2": "~0.2.1",
+    "ndarray": "~1.0.8"
   }
 }
